# VoxelEngine2025

./: .gitignore  CMakeLists.txt  README.md  build.sh  tasks.md
res/font/: font.json
res/shaders/: mesh.frag  mesh.vert  shader.frag  shader.vert  sprite.frag  sprite.vert  text.frag
src/: Engine.cpp  Engine.hpp  main.cpp
src/graphics/: Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp  Canvas.cpp  Canvas.hpp  ChunkMeshBuilder.cpp  ChunkMeshBuilder.hpp  Font.cpp  Font.hpp  Mesh.hpp  MeshRenderer.cpp  MeshRenderer.hpp  Shader.cpp  Shader.hpp  Stats.hpp  Text.cpp  Text.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
src/lighting/: LightSolver.cpp  LightSolver.hpp  Lighting.cpp  Lighting.hpp  Lightmap.hpp  light.hpp
src/logic/: AreaMap3D.hpp  Array2D.hpp  Array3D.hpp  ChunksController.cpp  ChunksController.hpp  FPSCounter.cpp  FPSCounter.hpp  InputController.cpp  InputController.hpp  utils.cpp  utils.hpp
src/physics/: AABB.hpp  Terrain.cpp  Terrain.hpp
src/voxels/: Block.cpp  Block.hpp  BlockModel.hpp  Chunk.cpp  Chunk.hpp  Generator.cpp  Generator.hpp  VoxelStorage.hpp  voxel.hpp
